Feat > Add some keyword to config file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "Baloo",
         "convite",
         "Crie",
-        "leckerli"
+        "evento",
+        "Início",
+        "leckerli",
+        "Sobre",
+        "Título"
     ]
 }
