Feat > Add some word to config file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,16 @@
         "Baloo",
         "convite",
         "Crie",
+        "Descrição",
+        "detalhes",
+        "endereço",
+        "Escreva",
         "evento",
         "Início",
         "leckerli",
+        "Rocketseat",
         "Sobre",
+        "Tipo",
         "Título"
     ]
 }
