Config > Add some keyword to config file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,14 @@
         "Crie",
         "Descrição",
         "detalhes",
+        "deve",
         "endereço",
         "Escreva",
         "evento",
+        "hoje",
+        "inicial",
         "Início",
+        "inválida",
         "leckerli",
         "Rocketseat",
         "Sobre",
